docs: expand quick start guide with cross-platform macOS/Linux and Windows instructions